sites/docs/src/content/api_reference/2.12/api/index.md
# API Reference

# Tests:

- [nf_core.bump_version](bump_version)
  - [`bump_nextflow_version()`](bump_version#nf_core.bump_version.bump_nextflow_version)
  - [`bump_pipeline_version()`](bump_version#nf_core.bump_version.bump_pipeline_version)
  - [`update_file_version()`](bump_version#nf_core.bump_version.update_file_version)
- [nf_core.create](create)
  - [`PipelineCreate`](create#nf_core.create.PipelineCreate)
- [nf_core.download](download)
  - [`ContainerError`](download#nf_core.download.ContainerError)
  - [`DownloadError`](download#nf_core.download.DownloadError)
  - [`DownloadProgress`](download#nf_core.download.DownloadProgress)
  - [`DownloadWorkflow`](download#nf_core.download.DownloadWorkflow)
  - [`WorkflowRepo`](download#nf_core.download.WorkflowRepo)
- [nf_core.launch](launch)
  - [`Launch`](launch#nf_core.launch.Launch)
- [nf_core.licences](licences)
  - [`WorkflowLicences`](licences#nf_core.licences.WorkflowLicences)
- [nf_core.lint](lint)
  - [`run_linting()`](lint#nf_core.lint.run_linting)
  - [`PipelineLint`](lint#nf_core.lint.PipelineLint)
- [nf_core.list](list)
  - [`LocalWorkflow`](list#nf_core.list.LocalWorkflow)
  - [`RemoteWorkflow`](list#nf_core.list.RemoteWorkflow)
  - [`Workflows`](list#nf_core.list.Workflows)
  - [`get_local_wf()`](list#nf_core.list.get_local_wf)
  - [`list_workflows()`](list#nf_core.list.list_workflows)
  - [`pretty_date()`](list#nf_core.list.pretty_date)
- [nf_core.modules](modules)
- [nf_core.params_file](params-file)
  - [`ParamsFileBuilder`](params-file#nf_core.params_file.ParamsFileBuilder)
  - [`_print_wrapped()`](params-file#nf_core.params_file._print_wrapped)
- [nf_core.schema](schema)
  - [`PipelineSchema`](schema#nf_core.schema.PipelineSchema)
- [nf_core.subworkflows](subworkflows)
- [nf_core.sync](sync)
  - [`PipelineSync`](sync#nf_core.sync.PipelineSync)
  - [`PullRequestExceptionError`](sync#nf_core.sync.PullRequestExceptionError)
  - [`SyncExceptionError`](sync#nf_core.sync.SyncExceptionError)
- [nf_core.utils](utils)
  - [`GitHubAPISession`](utils#nf_core.utils.GitHubAPISession)
  - [`Pipeline`](utils#nf_core.utils.Pipeline)
  - [`SingularityCacheFilePathValidator`](utils#nf_core.utils.SingularityCacheFilePathValidator)
  - [`anaconda_package()`](utils#nf_core.utils.anaconda_package)
  - [`check_if_outdated()`](utils#nf_core.utils.check_if_outdated)
  - [`custom_yaml_dumper()`](utils#nf_core.utils.custom_yaml_dumper)
  - [`determine_base_dir()`](utils#nf_core.utils.determine_base_dir)
  - [`fetch_remote_version()`](utils#nf_core.utils.fetch_remote_version)
  - [`fetch_wf_config()`](utils#nf_core.utils.fetch_wf_config)
  - [`file_md5()`](utils#nf_core.utils.file_md5)
  - [`get_biocontainer_tag()`](utils#nf_core.utils.get_biocontainer_tag)
  - [`get_first_available_path()`](utils#nf_core.utils.get_first_available_path)
  - [`get_repo_releases_branches()`](utils#nf_core.utils.get_repo_releases_branches)
  - [`is_file_binary()`](utils#nf_core.utils.is_file_binary)
  - [`is_pipeline_directory()`](utils#nf_core.utils.is_pipeline_directory)
  - [`is_relative_to()`](utils#nf_core.utils.is_relative_to)
  - [`load_tools_config()`](utils#nf_core.utils.load_tools_config)
  - [`nested_delitem()`](utils#nf_core.utils.nested_delitem)
  - [`nested_setitem()`](utils#nf_core.utils.nested_setitem)
  - [`parse_anaconda_licence()`](utils#nf_core.utils.parse_anaconda_licence)
  - [`pip_package()`](utils#nf_core.utils.pip_package)
  - [`plural_es()`](utils#nf_core.utils.plural_es)
  - [`plural_s()`](utils#nf_core.utils.plural_s)
  - [`plural_y()`](utils#nf_core.utils.plural_y)
  - [`poll_nfcore_web_api()`](utils#nf_core.utils.poll_nfcore_web_api)
  - [`prompt_pipeline_release_branch()`](utils#nf_core.utils.prompt_pipeline_release_branch)
  - [`prompt_remote_pipeline_name()`](utils#nf_core.utils.prompt_remote_pipeline_name)
  - [`rich_force_colors()`](utils#nf_core.utils.rich_force_colors)
  - [`run_cmd()`](utils#nf_core.utils.run_cmd)
  - [`set_wd()`](utils#nf_core.utils.set_wd)
  - [`setup_nfcore_cachedir()`](utils#nf_core.utils.setup_nfcore_cachedir)
  - [`setup_nfcore_dir()`](utils#nf_core.utils.setup_nfcore_dir)
  - [`setup_requests_cachedir()`](utils#nf_core.utils.setup_requests_cachedir)
  - [`sort_dictionary()`](utils#nf_core.utils.sort_dictionary)
  - [`strip_ansi_codes()`](utils#nf_core.utils.strip_ansi_codes)
  - [`validate_file_md5()`](utils#nf_core.utils.validate_file_md5)
  - [`wait_cli_function()`](utils#nf_core.utils.wait_cli_function)
